# Contrato_Dados_DDGS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  schema.py  teste.py
data/: data.csv
