[tool.poetry]
name = "inpasa"
version = "0.1.0"
description = ""
authors = ["João Fontebasso <joao.alvescont@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sqlalchemy = "^2.0.29"
streamlit = "^1.34.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
